--- a/tb_styles1.css
+++ b/tb_styles1.css
@@ -14,31 +14,31 @@
 /* HTML Styles */
 
 html {
-   background-color: rgb(175, 207, 167);  
-   color: rgb(51, 51, 51);
-   font-size: 12px;
+	background-color: rgb(175, 207, 167);
+	color: rgb(51, 51, 51);
+	font-size: 12px;
 }
 
 
 /* Page Body Styles */
 
 body {
-   background-color: rgb(211, 211, 211);
-   font-family: Verdana, Geneva, Arial, sans-serif; 	
-   margin-left: auto;
-   margin-right: auto;
-   width: 960px;
+	background-color: rgb(211, 211, 211);
+	font-family: Verdana, Geneva, Arial, sans-serif;
+	margin-left: auto;
+	margin-right: auto;
+	width: 960px;
 }
 
 
 /* Body Header Styles */
 
-body > header > img {
+body>header>img {
 	display: block;
 	width: 100%;
 }
 
-body > header > nav#topLinks {
+body>header>nav#topLinks {
 	background-color: rgb(51, 52, 45);
 	color: white;
 	line-height: 1.7em;
@@ -47,77 +47,81 @@ body > header > nav#topLinks {
 }
 
 
-nav#topLinks a:link, nav#topLinks a:visited {
+nav#topLinks a:link,
+nav#topLinks a:visited {
 	color: white;
 }
 
-nav#topLinks a:hover, nav#topLinks a:active {
+nav#topLinks a:hover,
+nav#topLinks a:active {
 	color: rgb(248, 237, 212);
 }
 
 nav#mainLinks ul li {
-	background-color: rgb(53, 98, 42);	
+	background-color: rgb(53, 98, 42);
 	display: block;
 	float: left;
 	text-align: center;
-	width: 20%;	
+	width: 20%;
 }
 
 nav#mainLinks ul li a {
-	color: white;	
+	color: white;
 	display: block;
-	height: 2.5em;	
+	height: 2.5em;
 	text-align: center;
-	line-height: 2.5em;	
+	line-height: 2.5em;
 }
 
-nav#mainLinks a:link, nav#mainLinks a:visited {
+nav#mainLinks a:link,
+nav#mainLinks a:visited {
 	color: white;
 }
 
-nav#mainLinks a:hover, nav#mainLinks a:active {
+nav#mainLinks a:hover,
+nav#mainLinks a:active {
 	background-color: rgb(51, 51, 45);
 }
 
 
 /* Article  Styles */
-article {	
-   clear: both;			   
-   padding: 30px 20px 10px 20px;
+article {
+	clear: both;
+	padding: 30px 20px 10px 20px;
 }
 
 article header {
-	margin: 20px auto;	
+	margin: 20px auto;
 	width: 70%;
 }
 
 article header h1 {
-	color: rgb(98, 160, 82);	
-	font-family: Baskerville, "Palatino Linotype", Palatino, 
-	             "Century Schoolbook", "Times New Roman", serif;
+	color: rgb(98, 160, 82);
+	font-family: Baskerville, "Palatino Linotype", Palatino,
+		"Century Schoolbook", "Times New Roman", serif;
 	font-size: 3em;
 	text-align: center;
 }
 
 article::after {
-   clear: both;	
-   content: "";
-   display: table;
+	clear: both;
+	content: "";
+	display: table;
 }
 
 
 /* Section Styles */
 
 section#leftColumn {
-	float: left;	
+	float: left;
 	margin-left: 15%;
 	margin-right: 4%;
-	width: 40%; 	
+	width: 40%;
 }
 
 section#leftColumn p {
 	font-size: 1.2em;
-	line-height: 1.4em;	
+	line-height: 1.4em;
 	margin-bottom: 20px;
 	text-align: justify;
 }
@@ -130,11 +134,11 @@ aside {
 	float: left;
 	margin-right: 15%;
 	padding: 20px;
-	width: 26%;	 
+	width: 26%;
 }
 
 aside h1 {
-	color: rgb(45, 93, 62);	
+	color: rgb(45, 93, 62);
 	font-weight: normal;
 	font-size: 2em;
 	margin-bottom: 10px;
@@ -160,17 +164,18 @@ nav#familyLinks a {
 
 footer {
 	background-color: rgb(53, 98, 42);
-	color: white;	
+	color: white;
 	display: block;
 	padding: 25px;
 }
 
-body > footer > nav.vertical, body > footer > section {
+body>footer>nav.vertical,
+body>footer>section {
 	float: left;
-	width: 25%;	
+	width: 25%;
 }
 
-body > footer > nav.vertical > ul {
+body>footer>nav.vertical>ul {
 	line-height: 2em;
 }
 
@@ -178,17 +183,18 @@ footer nav a {
 	text-decoration: underline;
 }
 
-footer a:visited, footer a:link {
+footer a:visited,
+footer a:link {
 	color: white;
 }
 
-footer a:hover, footer a:active {
+footer a:hover,
+footer a:active {
 	color: white;
 }
 
 footer::after {
-   clear: both;	
-   content: "";
-   display: table;
+	clear: both;
+	content: "";
+	display: table;
 }
-
