--- a/tb_visual2.css
+++ b/tb_visual2.css
@@ -6,8 +6,8 @@
    Tutorial Case
    
    Visual Effects Style Sheet for Photo Page at Tree and Book
-   Author:
-   Date:   
+   Author: Chris Kim 
+   Date:   10.30.18  
    
    Filename: tb_visual2.css
 
