--- a/tb_visual1.css
+++ b/tb_visual1.css
@@ -16,6 +16,9 @@
 
 /* Figure Box Styles */
 figure {
+    border-style: solid;
+    border-width:25px;
+    border-image: url(tb_border.png) 50 repeat;
     margin: 20px auto 0px;
     width: 80%;
 }
@@ -24,13 +27,15 @@ figure img {
     display: block;
     width: 100%;
 }
+
+
+
 /* adobe illustrator */
 figure figcaption {
     background-color: white;
     font-family: 'Palatino Linotype', Palatino, 'Times New Roman', serif;
     font-style: italic;
     padding: 10px 0;
-    border-radius: 3px;
     text-align: center;
 }
 
@@ -45,19 +50,29 @@ html {
 
 
 /* Article Styles */
+article {
+    background: url(tb_back2.png) bottom right/ 15% no-repeat content-box,
+                url(tb_back3.png) bottom left/ 15% no-repeat content-box,
+                url(tb_back4.png) 100% / cover no-repeat rgb(211, 211, 211);
+}
 
-
-
+article header h1 {
+    text-shadow: rgb(181, 211, 181) 2px 2px 1px, rgba(21, 21, 21, 0.66) 5px 5px 25px;
+}
 
 /* Page Body Styles */
-
+body {
+    border-left: 1px solid rgb(51, 15, 15);
+    border-right: 1px solid rgb(51, 15, 15);
+}
 
 
 
 /* Aside Styles */
-
+aside {
+    border: 4px double rgb(45, 93, 62);
+    border-radius: 30px;
+}
 
 
 /* Footer Styles */
-
-
